# rust-demo-semantics

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  byol.py  parse-mx-rust-contract-args.sh  parse-mx-rust-contract-test.sh  parse-mx-rust-contract.sh  parse-mx-rust-test.sh  parse-mx-rust.sh  parse-rust.sh  ukm-integration.md
compilation/: prepare-contract.sh  prepare-erc20.sh  prepare-rust-bundle.sh
kllvm/: ulm.k
parsers/: args-mx-rust-contract.sh  args-mx-rust-two-contracts.sh  args-ukm-preprocessing-execution.sh  args-ulm-preprocessing-execution.sh  contract-mx-rust-contract.sh  contract-mx-rust-two-contracts.sh  contract-mx-rust.sh  contract-rust.sh  crates-rust-execution.sh  crates-ukm-preprocessing-execution.sh  crates-ukm-testing-execution.sh  crates-ulm-preprocessing-execution.sh  crates-ulm-testing-execution.sh  inc-contract-file.sh  inc-crates.sh  inc-endpoint-args-file.sh  inc-test-mx-rust-file.sh  inc-type-path.sh  test-mx-rust-contract.sh  test-mx-rust-two-contracts.sh  test-mx-rust.sh  test-rust.sh  test-ukm-testing-execution.sh  test-ulm-testing-execution.sh  type-path-mx-rust.sh  type-path-rust-preprocessing.sh  type-path-rust.sh
rust-lite/: .cruft.json  Makefile  README.md  flake.nix  pyproject.toml
rust-lite/src/rust_lite/: __init__.py  __main__.py  cli.py  extract_preprocessed.py  manager.py
rust-lite/src/tests/integration/: test_integration.py
rust-semantics/: config.md  conversions.md  error.md  execution.md  expression.md  full-preprocessing.md  helpers.md  indexing.md  preprocessing.md  representation.md  rust-common-syntax.md  (+4 more)
(+475 files in other folders)
